Fixed scrollbar appearance

--- a/app/components/CloneDirectory/CloneDirectory.css
+++ b/app/components/CloneDirectory/CloneDirectory.css
@@ -1,5 +1,4 @@
 .container {
-    width: 100%;
     padding: 10px;
 }
 
